--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="item-action top-down delay-6">
                                 <a href="#" class="btn btn-hover">
                                     <i class="bx bxs-right-arrow"></i>
-                                    <span>Watch now</span>
+                                    <span>Coming soon</span>
                                 </a>
                             </div>
                         </div>
@@ -88,34 +88,27 @@
                 <!-- END SLIDE ITEM -->
                 <!-- SLIDE ITEM -->
                 <div class="hero-slide-item">
-                    <img src="" alt="">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/3/3c/Lightyear_%282022_film%29_poster.jpg" alt="">
                     <div class="overlay"></div>
                     <div class="hero-slide-item-content">
                         <div class="item-content-wraper">
                             <div class="item-content-title top-down">
-                                -
+                                Lightyear
                             </div>
                             <div class="movie-infos top-down delay-2">
                                 <div class="movie-info">
-                                    <i class="bx bxs-star"></i>
-                                    <span>0.0</span>
-                                </div>
-                                <div class="movie-info">
                                     <i class="bx bxs-time"></i>
-                                    <span>0 mins</span>
+                                    <span>107 mins</span>
                                 </div>
                                 <div class="movie-info">
                                     <span>HD</span>
                                 </div>
-                                <div class="movie-info">
-                                    <span>0</span>
-                                </div>
                             </div>
                             <div class="item-content-description top-down delay-4">
-                                Coming soon
+                                Legendary space ranger Buzz Lightyear embarks on an intergalactic adventure alongside ambitious recruits Izzy, Mo, Darby, and his robot companion, Sox.
                             </div>
                             <div class="item-action top-down delay-6">
-                                <a href="#" class="btn btn-hover">
+                                <a href="https://jimenezreuven13.wistia.com/medias/uufisi2k8i" class="btn btn-hover">
                                     <i class="bx bxs-right-arrow"></i>
                                     <span>Watch now</span>
                                 </a>
@@ -356,32 +349,25 @@
                     </div>
                 </a>
                 <!-- END MOVIE ITEM -->
-                <!-- MOVIE ITEM 
-                <a href="#" class="movie-item">
-                    <img src="./images/movies/transformer.jpg" alt="">
+                <!-- MOVIE ITEM -->
+                <a href="https://jimenezreuven13.wistia.com/medias/uufisi2k8i" class="movie-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/3/3c/Lightyear_%282022_film%29_poster.jpg" alt="">
                     <div class="movie-item-content">
                         <div class="movie-item-title">
-                            Transformer
+                            Lightyear
                         </div>
                         <div class="movie-infos">
                             <div class="movie-info">
-                                <i class="bx bxs-star"></i>
-                                <span>9.5</span>
-                            </div>
-                            <div class="movie-info">
                                 <i class="bx bxs-time"></i>
-                                <span>120 mins</span>
+                                <span>107 mins</span>
                             </div>
                             <div class="movie-info">
                                 <span>HD</span>
                             </div>
-                            <div class="movie-info">
-                                <span>16+</span>
-                            </div>
                         </div>
                     </div>
                 </a>
-                 END MOVIE ITEM -->
+                <!-- END MOVIE ITEM -->
                 <!-- MOVIE ITEM 
                 <a href="#" class="movie-item">
                     <img src="./images/movies/resident-evil.jpg" alt="">
